--- a/index.html
+++ b/index.html
@@ -16,21 +16,77 @@
     </header>
     <ul>
       <li class="navLink"><a href="#suVida">Su vida</a></li>
-      <li class="navLink"><a href="#suTrabajo">su trabajo</a></li>
+      <li class="navLink"><a href="#suTrabajo">Su trabajo</a></li>
     </ul>
   </nav>
 
-  <article id="suVida">
-    <div>
-      <h1>Su vida</h1>
+  <section id="banner">
+    <div class="bannerItem">
+      <img src="img/banner-img.jpg" alt="José Lavat" id="banerImg">
     </div>
+    <div class="bannerItem">
+      <h3>
+        23 de septiembre de
+        1948 - 15 de mayo de 2018
+      </h3>
+    </div>
+  </section>
+
+  <article id="suVida">
+
+    <div id="suVida1">
+
+      <div id="art1">
+        <p>José Francisco Lavat Pacheco, más conocido como José Lavat, fue un actor de doblaje y locutor
+          mexicano,
+          con 51 años de trayectoria.​​​Fue la voz recurrente de actores de la talla de Robert De Niro, Harrison Ford,
+          Michael Caine, Ian McKellen, Christopher Lee y Al Pacino</p>
+      </div>
+
+      <div>
+
+        <img src="img/su-vida.img-1.jpg" alt="" id="img-su-vida">
+
+      </div>
+
+    </div>
+
+    <div id="suVida2">
+      <div id="art2">
+        <p>Fue el locutor del canal Cinemax Latinoamérica y también de la radiodifusora Imagen 90.5 FM de
+          México, además
+          de ser la voz institucional de Radio Concierto en Chile desde 2000, labor por la que llegó a hacerse muy
+          conocido en dicho país durante las cuatro etapas por las que pasó la radio en la primera década del milenio,
+          haciéndose presente con los lemas: "La radio de hoy", "Concierto presente en tu memoria", "La voz de los 80" y
+          más recientemente "Concierto, 88.5, sólo grandes canciones"</p>
+      </div>
+    </div>
+
   </article>
 
   <section id="suTrabajo">
-    <div>
-      <h2>Su trabajo</h2>
+
+    <div id="tra1">
+      <h2 class="tra1-item">¿Podra Goku lograrlo?</h2>
+      <p class="tra1-item"> El querido narrador de las tres primeras temporadas de dragon ball</p>
+      <img src="img/su-trabajo-img.jpg" class="tra1-item" alt="">
     </div>
+
+    <div id="tra2">
+      <img src="img/su-trabajo-img-2.jpg" alt="" class="tra1-item">
+      <div>
+        <h2 class="tra1-item">Una carrera de mas de 50 años</h2>
+        <p class="tra1-item">Estuvo en varias franquisias no solo en “Dragon Ball” tambien participo en “Superman”,
+          ”Starwars”, “Los
+          Simposons”, “Crónicas de Narnia”</p>
+      </div>
+    </div>
+
   </section>
+
+  <footer>
+    <h2>En honor a José Lavat</h2>
+  </footer>
 
 </body>
 
