--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <div id="tra2">
       <img src="img/su-trabajo-img-2.jpg" alt="" class="tra1-item">
-      <div>
+      <div id="txt-tra2">
         <h2 class="tra1-item">Una carrera de mas de 50 años</h2>
         <p class="tra1-item">Estuvo en varias franquisias no solo en “Dragon Ball” tambien participo en “Superman”,
           ”Starwars”, “Los
