Add Animation with CSS

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <section id="banner">
     <div class="bannerItem">
-      <img src="img/banner-img.jpg" alt="José Lavat" id="banerImg">
+      <img src="img/banner-img.jpg" alt="José Lavat" id="banerImg" class="rotate-diagonal-right">
     </div>
     <div class="bannerItem">
       <h3>
@@ -45,14 +45,14 @@
 
       <div>
 
-        <img src="img/su-vida.img-1.jpg" alt="" id="img-su-vida">
+        <img src="img/su-vida.img-1.jpg" alt="" id="img-su-vida" class="rotate-diagonal-right">
 
       </div>
 
     </div>
 
     <div id="suVida2">
-      <div id="art2">
+      <div id="art2" class="">
         <p>Fue el locutor del canal Cinemax Latinoamérica y también de la radiodifusora Imagen 90.5 FM de
           México, además
           de ser la voz institucional de Radio Concierto en Chile desde 2000, labor por la que llegó a hacerse muy
@@ -66,7 +66,7 @@
 
   <section id="suTrabajo">
 
-    <div id="tra1">
+    <div id="tra1" class="tracking-in-expand-forward-top">
       <h2 class="tra1-item">¿Podra Goku lograrlo?</h2>
       <p class="tra1-item"> El querido narrador de las tres primeras temporadas de dragon ball</p>
       <img src="img/su-trabajo-img.jpg" class="tra1-item" alt="">
